--- a/proyecto html/restaurantes.html
+++ b/proyecto html/restaurantes.html
@@ -8,6 +8,14 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/js/bootstrap.bundle.min.js"></script>
     <title>Restaurantes</title>
     <link rel="stylesheet" href="Imagenes/logoPlaza.jpg">
+    <style>
+        .col {
+            margin-bottom: 60px;
+        }
+        .container{
+            margin-left: 10%;
+        }
+    </style>
 </head>
 
 <body>
@@ -15,84 +23,275 @@
         <img src="Imagenes/logoPlaza.jpg" alt="logoPlaza">
     </header>
 
-    <article>
-        <h2>BURGUER KING</h2>
-        <a href="https://www.plazanorte2.com/restaurante/burger-king?location=B038" target="_blank"><img
-                src="Imagenes/burguer_king.png" alt=""></a>
-        <p>Burger King, también conocida como BK, es una cadena de restaurantes de comida rápida estadounidense
-            especializada en la elaboración de hamburguesas.</p>
+    <article class="container">
 
-        <h2>CERVECERÍA 100 MONTADITOS</h2>
-        <a href="https://spain.100montaditos.com/es/" target="_blank"><img src="Imagenes/100mon.png" alt=""></a>
-        <p>CERVECERIA 100 MONTADITOS es un innovador concepto de restauración basado en una variada oferta de 100
-            montaditos de diversos productos al precio único de 1€. Ofrece al consumidor una modalidad de alimentación
-            sana que se combina con los factores de comodidad, rapidez y alto grado de atención al cliente.</p>
+        <section class="row">
+            <div class="col">
+                <img src="Imagenes/burguer_king.png" class="img-fluid rounded shadow"
+                    class="img-fluid w-100 object-fit-cover" style="height: 200px;  width: 200px; max-width: 100%;" data-bs-toggle="modal"
+                    data-bs-target="#tienda1" style="cursor: pointer;">
+            </div>
 
-        <h2>DUNKIN COFFEE</h2>
-        <a href="https://www.dunkin.es/" target="_blank"><img src="Imagenes/dunkin.jpg" alt=""></a>
-        <p>Puesto que el café se considera cada día más como un bien de primera necesidad, el programa Tree-to-Cup de
-            Dunkin’ Coffee es un planteamiento revolucionario en la gestión del café. La empresa establece y monitoriza
-            proactivamente estrictos controles de calidad, desde los cafetales al resto de toda la cadena de producción
-            cafetera.</p>
+            <div class="col">
+                <img src="Imagenes/dunkin.jpg" class="img-fluid rounded shadow" class="img-fluid w-100 object-fit-cover"
+                    style="height: 200px;  width: 200px; max-width: 100%;" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#tienda2"
+                    style="cursor: pointer;">
 
-        <h2>GINOS</h2>
-        <a href="https://www.ginos.es/" target="_blank"><img src="Imagenes/ginos.jpg" alt=""></a>
-        <p>Saborea deliciosas pizzas estiradas a mano, pastas salteadas al momento con auténticas recetas tradicionales
-            e ingredientes traídos desde Italia. </p>
+            </div>
 
-        <h2>GOIKO</h2>
-        <a href="https://www.goiko.com/es/" target="_blank"><img src="Imagenes/goiko.png" alt=""></a>
-        <p>En Goiko sabemos que las hamburguesas más ricas siempre manchan. Eso es así. Para nosotros, el chorreo es ese
-            momentazo en el que el queso se derrama, la yema de huevo explota tiñéndolo todo y, justo en ese instante,
-            no importa nada más.</p>
+            <div class="col">
+                <img src="Imagenes/goiko.png" class="img-fluid rounded shadow" class="img-fluid w-100 object-fit-cover"
+                    style="height: 200px;  width: 200px; max-width: 100%;" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#tienda3"
+                    style="cursor: pointer;">
+            </div>
 
-        <h2>HÄAGEN-DAZS</h2>
-        <a href="https://www.haagen-dazs.es/" target="_blank"><img src="Imagenes/haagen.jpg" alt=""></a>
-        <p>Häagen-Dazs es una marca de helados estadounidense establecida por Reuben y Rose Mattus en The Bronx, Nueva
-            York, en 1960. Comenzando con solo tres sabores: vainilla, chocolate y café, la compañía abrió su primera
-            tienda minorista en Brooklyn, Nueva York. York, el 15 de noviembre de 1976.</p>
 
-        <h2>LA TAGLIATELLA</h2>
-        <a href="https://www.latagliatella.es/" target="_blank"><img src="Imagenes/tagliatella.jpg" alt=""></a>
-        <p>Para disfrutar de la auténtica comida italiana, ven al restaurante italiano La Tagliatella. Las amplias
-            raciones de este restaurante pizzería son perfectas para degustar en compañía y cuentas con unos
-            ingredientes de alta calidad.</p>
 
-        <h2>LLAOLLAO</h2>
-        <a href="https://www.llaollaoweb.com/es/" target="_blank"><img src="Imagenes/llaollao.png" alt=""></a>
-        <p>Disfruta del yogur helado llaollao y vive la experiencia más natural con los toppings más deliciosos, todas
-            las salsas que puedas imaginar, la fruta más fresca y, por supuesto, el frozen yogurt más nutritivo y
-            refrescante.</p>
+        </section>
 
-        <h2>McDonald'S</h2>
-        <a href="https://mcdonalds.es/" target="_blank"><img src="Imagenes/macas.jpg" alt=""></a>
-        <p>McDonald's es una franquicia de restaurantes de comida rápida estadounidense. Sus principales productos son
-            las hamburguesas, las patatas fritas, los menús para el desayuno y los refrescos. También se encuentra una
-            oferta disponible de batidos, helados, postres y ensaladas de fruta o de verdura</p>
+        <section class="row">
+            <div class="col">
+                <img src="Imagenes/macas.jpg" class="img-fluid rounded shadow" class="img-fluid w-100 object-fit-cover"
+                    style="height: 200px;  width: 200px; max-width: 100%;" data-bs-toggle="modal" data-bs-target="#tienda4" style="cursor: pointer;">
+            </div>
 
-        <h2>RODILLA</h2>
-        <a href="https://www.rodilla.es/" target="_blank"><img src="Imagenes/rodilla.jpg" alt=""></a>
-        <p>Rodilla es una franquicia española de comida rápida especializada en sándwiches. Fue fundada en 1939 a partir
-            de un negocio local en la plaza del Callao y en los años 1990 comenzó su expansión a otras ciudades
-            españolas.</p>
+            <div class="col">
+                <img src="Imagenes/starbucks.webp" class="img-fluid rounded shadow"
+                    class="img-fluid w-100 object-fit-cover" style="height: 200px;  width: 200px; max-width: 100%;" class="btn btn-primary"
+                    data-bs-toggle="modal" data-bs-target="#tienda5" style="cursor: pointer;">
 
-        <h2>STARBUCKS</h2>
-        <a href="https://www.starbucks.es/" target="_blank"><img src="Imagenes/starbucks.webp" alt=""></a>
-        <p>Starbucks Corporation es una cadena internacional de café fundada en Washington. Es la compañía de café más
-            grande del mundo, con más de 24 000 locales en 70 países.</p>
+            </div>
 
-        <h2>TACO BELL</h2>
-        <a href="https://tacobell.es/es/inicio" target="_blank"><img src="Imagenes/taco_bell.jpg" alt=""></a>
-        <p>En Taco Bell podrás disfrutar desde entrantes para compartir, menús, productos individuales y postres. Tacos,
-            burritos, quesadillas y crunchy wraps hacen que nuestra oferta sea amplia y variada. Ah! Y no te olvides de
-            rellenar gratis las veces que quieras tu refresco.</p>
+            <div class="col">
+                <img src="Imagenes/vips.jpg" class="img-fluid rounded shadow" class="img-fluid w-100 object-fit-cover"
+                    style="height: 200px;  width: 200px; max-width: 100%;" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#tienda6"
+                    style="cursor: pointer;">
+            </div>
 
-        <h2>VIPS</h2>
-        <a href="https://www.vips.es/" target="_blank"><img src="Imagenes/vips.jpg" alt=""></a>
-        <p>¿Se acerca la hora de comer y no sabes qué elegir? Tenemos para ti, desayunos, comidas, meriendas o cenas
-            ideal para tu paladar. A donde quieras ir, ve con VIPS.</p>
+
+
+        </section>
+
+
+
+
+        <!--  Modal Burger King -->
+        <div class="modal" id="tienda1">
+            <div class="modal-dialog modal-sm modal-dialog-centered modal-lg">
+                <div class="modal-content">
+
+                    <!-- Modal Header -->
+                    <div class="modal-header">
+                        <h4 class="modal-title">Burger King</h4>
+                        <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
+                    </div>
+
+                    <!-- Modal body -->
+                    <div class="modal-body">
+                        <img src="Imagenes/TIENDABURGER.jpg" controls width="100%" alt="">
+                        <p>Burger King, también conocida como BK, es una cadena de restaurantes de comida rápida
+                            estadounidense
+                            especializada en la elaboración de hamburguesas.</p>
+                    </div>
+
+                    <!-- Modal footer -->
+                    <div class="modal-footer">
+                        <button>
+                            <a href="https://www.burgerking.es/es/store-locator">Visítanos</a>
+                        </button>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+
+
+        <!-- Button to Open the Modal -->
+
+
+        <!--  Modal Dunkin Coffe -->
+        <div class="modal" id="tienda2">
+            <div class="modal-dialog modal-sm modal-dialog-centered modal-lg">
+                <div class="modal-content">
+
+                    <!-- Modal Header -->
+                    <div class="modal-header">
+                        <h4 class="modal-title">Dunkin Coffe</h4>
+                        <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
+                    </div>
+
+                    <!-- Modal body -->
+                    <div class="modal-body">
+                        <img src="Imagenes/TiendaDunkin.webp" controls width="100%" alt="">
+                        <p>Puesto que el café se considera cada día más como un bien de primera necesidad, el programa
+                            Tree-to-Cup de
+                            Dunkin’ Coffee es un planteamiento revolucionario en la gestión del café. La empresa
+                            establece y monitoriza
+                            proactivamente estrictos controles de calidad, desde los cafetales al resto de toda la
+                            cadena de producción
+                            cafetera.</p>
+                    </div>
+
+                    <!-- Modal footer -->
+                    <div class="modal-footer">
+                        <button>
+                            <a href="https://www.dunkin.es/">Visítanos</a>
+                        </button>
+                    </div>
+
+                </div>
+            </div>
+        </div>
+
+
+        <!-- Button to Open the Modal -->
+
+
+        <!--  Modal GOIKO -->
+        <div class="modal" id="tienda3">
+            <div class="modal-dialog modal-sm modal-dialog-centered modal-lg">
+                <div class="modal-content">
+
+                    <!-- Modal Header -->
+                    <div class="modal-header">
+                        <h4 class="modal-title">GOIKO</h4>
+                        <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
+                    </div>
+
+                    <!-- Modal body -->
+                    <div class="modal-body">
+                        <img src="Imagenes/TiendaGoiko.webp" controls width="100%" alt="">
+                        <p>En Goiko sabemos que las hamburguesas más ricas siempre manchan. Eso es así. Para nosotros,
+                            el chorreo es ese
+                            momentazo en el que el queso se derrama, la yema de huevo explota tiñéndolo todo y, justo en
+                            ese instante,
+                            no importa nada más.</p>
+                    </div>
+
+                    <!-- Modal footer -->
+                    <div class="modal-footer">
+                        <button>
+                            <a href="https://www.goiko.com/es/provincia/madrid/">Visítanos</a>
+                        </button>
+                    </div>
+
+                </div>
+            </div>
+        </div>
+
+        <!-- Button to Open the Modal -->
+
+
+        <!--  Modal Mcdonalds -->
+        <div class="modal" id="tienda4">
+            <div class="modal-dialog modal-sm modal-dialog-centered modal-lg">
+                <div class="modal-content">
+
+                    <!-- Modal Header -->
+                    <div class="modal-header">
+                        <h4 class="modal-title">Mcdonalds</h4>
+                        <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
+                    </div>
+
+                    <!-- Modal body -->
+                    <div class="modal-body">
+                        <img src="Imagenes/TIENDAMACAS" controls width="100%" alt="">
+                        <p>McDonald's es una franquicia de restaurantes de comida rápida estadounidense. Sus principales
+                            productos son
+                            las hamburguesas, las patatas fritas, los menús para el desayuno y los refrescos. También se
+                            encuentra una
+                            oferta disponible de batidos, helados, postres y ensaladas de fruta o de verdura</p>
+
+
+                    </div>
+
+                    <!-- Modal footer -->
+                    <div class="modal-footer">
+                        <button>
+                            <a href="https://mcdonalds.es/">Visítanos</a>
+                        </button>
+                    </div>
+
+                </div>
+            </div>
+        </div>
+
+        <!-- Button to Open the Modal -->
+
+
+        <!--  Modal STARBUCKS -->
+        <div class="modal" id="tienda5">
+            <div class="modal-dialog modal-sm modal-dialog-centered modal-lg">
+                <div class="modal-content">
+
+                    <!-- Modal Header -->
+                    <div class="modal-header">
+                        <h4 class="modal-title">STARBUCKS</h4>
+                        <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
+                    </div>
+
+                    <!-- Modal body -->
+                    <div class="modal-body">
+                        <img src="Imagenes/TiendaStarbucks.jpg" controls width="100%" alt="">
+                        <p>Starbucks Corporation es una cadena internacional de café fundada en Washington. Es la
+                            compañía de café más
+                            grande del mundo, con más de 24 000 locales en 70 países.</p>
+
+                    </div>
+
+                    <!-- Modal footer -->
+                    <div class="modal-footer">
+                        <button>
+                            <a href="https://www.starbucks.es/">Visítanos</a>
+                        </button>
+                    </div>
+
+                </div>
+            </div>
+        </div>
+
+        <!-- Button to Open the Modal -->
+
+
+        <!--  Modal VIPS -->
+        <div class="modal" id="tienda6">
+            <div class="modal-dialog modal-sm modal-dialog-centered modal-lg">
+                <div class="modal-content">
+
+                    <!-- Modal Header -->
+                    <div class="modal-header">
+                        <h4 class="modal-title">VIPS</h4>
+                        <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
+                    </div>
+
+                    <!-- Modal body -->
+                    <div class="modal-body">
+                        <img src="Imagenes/TiendaVips.jpg" controls width="100%" alt="">
+                        <p>¿Se acerca la hora de comer y no sabes qué elegir? Tenemos para ti, desayunos, comidas,
+                            meriendas o cenas
+                            ideal para tu paladar. A donde quieras ir, ve con VIPS.</p>
+
+                    </div>
+
+                    <!-- Modal footer -->
+                    <div class="modal-footer">
+                        <button>
+                            <a href="https://www.vips.es/">Visítanos</a>
+                        </button>
+                    </div>
+
+                </div>
+            </div>
+        </div>
+
+
+
+
+
+
 
     </article>
+
 
 </body>
 
