--- a/proyecto html/tiendas.html
+++ b/proyecto html/tiendas.html
@@ -27,18 +27,18 @@
 
         <section class="row">
             <div class="col">
-                <img src="Imagenes/zara.jpg" class="img-fluid rounded" data-bs-toggle="modal"
+                <img src="Imagenes/zara.jpg" class="img-fluid rounded " data-bs-toggle="modal"
                     data-bs-target="#tienda1" style="cursor: pointer;">
             </div>
 
             <div class="col">
-                <img src="Imagenes/H&M.jpg" class="img-fluid rounded shadow" class="btn btn-primary"
+                <img src="Imagenes/H&M.jpg" class="img-fluid rounded " class="btn btn-primary"
                     data-bs-toggle="modal" data-bs-target="#tienda2" style="cursor: pointer;">
 
             </div>
 
             <div class="col">
-                <img src="Imagenes/pull&bear" class="img-fluid rounded shadow" class="btn btn-primary"
+                <img src="Imagenes/pull&bear" class="img-fluid rounded " class="btn btn-primary"
                     data-bs-toggle="modal" data-bs-target="#tienda3" style="cursor: pointer;">
             </div>
 
@@ -49,16 +49,16 @@
 
         <section class="row">
             <div class="col">
-                <img src="Imagenes/footLocker" class="img-fluid rounded shadow" data-bs-toggle="modal" data-bs-target="#tienda4" style="cursor: pointer;">
+                <img src="Imagenes/footLocker" class="img-fluid rounded " data-bs-toggle="modal" data-bs-target="#tienda4" style="cursor: pointer;">
             </div>
 
             <div class="col">
-                <img src="Imagenes/adidas" class="img-fluid rounded shadow"  data-bs-toggle="modal" data-bs-target="#tienda5" style="cursor: pointer;">
+                <img src="Imagenes/adidas" class="img-fluid rounded "  data-bs-toggle="modal" data-bs-target="#tienda5" style="cursor: pointer;">
 
             </div>
 
             <div class="col">
-                <img src="Imagenes/fnac" class="img-fluid rounded shadow"  data-bs-toggle="modal" data-bs-target="#tienda6" style="cursor: pointer;">
+                <img src="Imagenes/fnac" class="img-fluid rounded "  data-bs-toggle="modal" data-bs-target="#tienda6" style="cursor: pointer;">
             </div>
 
 
