--- a/proyecto html/visitanos.html
+++ b/proyecto html/visitanos.html
@@ -28,6 +28,91 @@
         <p>Tiendas: Lunes a Sábado de 10:00 a 22:00.</p>
         <p>Restauración y ocio: Todos los días de 12:00 a 01:00.</p>
 
+
+        <h2>Teléfono</h2>
+        <p>916 59 39 67</p>
+
+        <h2>Transporte público</h2>
+        <p>Para llegar a Plaza Norte 2 desde Sanchinarro en transporte público, puedes tomar la línea 10 del Metro de
+            Madrid hasta la parada de "Reyes Católicos". Desde allí, puedes caminar unos 15-20 minutos o tomar la línea
+            L-4 del autobús urbano de San Sebastián de los Reyes, en dirección Moscatelares, que te dejará cerca del
+            centro comercial. </p>
+
+        <h2>Parking</h2>
+        <p>Más de 6800 plazas de aparcamiento para tu comodidad.
+            Dirección: 28703 San Sebastián de los Reyes, Madrid
+        </p>
+
+        <h2>Wi-fi</h2>
+        <p>De forma gratuita, sin limitaciones y para todos nuestros clientes. Puede conectarse a nuestra red
+            *ENJOY-PLAZANORTE2. </p>
+
+
+        <h2>Cajeros automáticos</h2>
+        <p>El centro dispone de varios cajeros repartidos en las dos plantas.</p>
+
+        <h2>Lavado de coches</h2>
+        <p>Mima tu coche en Chap.ó!, el primer salón de belleza para el automóvil.</p>
+
+        <h2>Club infantil</h2>
+        <p>CLUB INFANTIL PLAZA NORTE 2
+            Títeres, actuaciones y talleres.
+
+
+            Horario:
+            o Viernes de 17:30 a 20:30 horas.
+
+            o Sábados y domingos de 12:00 a 14:00 horas y de 17:30 a 20:30 horas.
+
+
+
+            Guiñol: sábados de 12:00 a 14:00 horas.
+            Actividades infantiles: sábados por la tarde de 17:30 a 20:15 horas.
+
+
+            Normas Club Infantil:
+            Edad para participar: Juegos de 3 a 12 años. Talleres de 4 a 12 años.
+            Es imprescindible ser socio/a del Club Infantil para poder participar.
+            Aforo máximo: 30 participantes. Si el aforo estuviera completo, para participar habrá que esperar turno.
+            Duración de la actividad: 45 minutos.
+            El adulto que acompaña al menor habrá de ser mayor de edad y tendrá que facilitar los siguientes datos a
+            la monitora: Nombre, DNI y número de teléfono móvil. Además, será la misma persona que recoja al menor
+            a la hora indicada, presentando su DNI.
+            El adulto debe estar presente, si desea abandonar la actividad será bajo su responsabilidad.
+            El menor no podrá salir del recinto sin el adulto responsable.
+            Para mayor seguridad y control de los participantes se ruega a los adultos no pasar al recinto.
+            Para estar dentro del espacio es obligatorio descalzarse y el uso de calcetines.
+            Los tiempos de juego en las consolas, la cueva y la mesa multimedia serán establecidos por los monitores.
+            Respeta el mobiliario del Club Infantil. No se podrá acceder al Club Infantil fuera del horario de
+            apertura.
+            La organización del Club Infantil no se hace responsable de ningún objeto perdido o extraviado.
+            No está permitida la entrada al recinto con objetos punzantes o cortantes, comida y/o bebida.
+            Notifica a los monitores cualquier problema o preocupación de forma inmediata. La participación en el Club
+            Infantil supone la aceptación de estas normas.
+            Cumple estas normas para que todas las participantes puedan disfrutar de manera segura y divertida del club
+            Infantil.</p>
+
+        <h2>Pet friendly</h2>
+        <p>Plaza Norte 2 es un centro "Pet Friendly", permitiendo la entrada de animales domésticos bajo las siguientes
+            condiciones:
+
+            Es fundamental que el perro mantenga una conducta adecuada. Evite venir con su mascota si no está
+            perfectamente educada, ladra frecuentemente o es habitual que haga sus necesidades donde no debe.
+            El perro debe ir siempre con correa y caminando junto a su dueño en el suelo, teniendo prohibido subirse al
+            mobiliario o dejarle atado a él.
+            Si su mascota hace sus necesidades en el Centro Comercial, deberá limpiar sus excrementos de inmediato,
+            haciéndose responsable el dueño en el caso de que haya una incidencia como consecuencia de no haber recogido
+            las deposiciones.
+            Por la seguridad de su perro, estará prohibido utilizar las escaleras mecánicas, ya que se puede lesionar.
+            Tal y como marca la legislación, otra norma a tener en cuenta es si su mascota es un perro calificado como
+            potencialmente peligroso (PPP) deben ir, además de sujetos con correa, con bozal y cumplir con todo lo
+            indicado en las normativas vigentes. No obstante a lo anterior, TODOS los perros con peso superior a 10kg,
+            deben ir con correa y bozal.
+            El acceso a los locales comerciales dependerá de la autorización expresa del mismo.
+            En todos los casos se deberá cumplir con las normativas locales, autonómicas y estatales relativas a la
+            tenencia de animales. (Ordenanza reguladora de la tenencia de animales domésticos del Ayuntamiento de San
+            Sebastián de los Reyes.)</p>
+
         <h2>Mapa</h2>
         <p>Consulta nuestra ubicación en <iframe
                 src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3032.0335748562684!2d-3.6160852246267505!3d40.54084737141985!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xd422cde0b7c5567%3A0xabbb242cbe4258e0!2sCentro%20Comercial%20Plaza%20Norte%202!5e0!3m2!1ses!2ses!4v1745829536689!5m2!1ses!2ses"
