he agregado los modales en ocio

--- a/proyecto html/ocio.html
+++ b/proyecto html/ocio.html
@@ -18,14 +18,128 @@
 
     <article>
 
-        <h2>Cines</h2>
-        <a href="OcioCine.html"><img src="Imagenes/cine.jpg" alt=""></a>
+        <h2>Bolera</h2>
 
-        <h2>Laser city</h2>
-        <a href="OcioLaser.html"><img src="Imagenes/LaserCity.png" alt=""></a>
+        <section class="row">
+            <div class="col">
+                <img src="Imagenes/bolera2.jpg" class="img-fluid rounded" class="img-fluid rounded shadow"
+                    class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#ocio1" style="cursor: pointer;">
+            </div>
 
-        <h2>Restaurantes</h2>
-        <a href="OcioRestaurantes.html"><img src="Imagenes/restaurantes" alt=""></a>
+
+        </section>
+        <div class="modal" id="ocio1">
+            <div class="modal-dialog modal-sm modal-dialog-centered modal-lg">
+                <div class="modal-content">
+
+                    <!-- Modal Header -->
+                    <div class="modal-header">
+                        <h4 class="modal-title"> Bolera</h4>
+                        <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
+                    </div>
+
+                    <!-- Modal body -->
+                    <div class="modal-body">
+                        <img src="Imagenes/bolera.jpg" controls width="100%" alt="">
+                        <p> <b>Bolera:</b> En este centro comercial, disponemos de una bolera lista para ser usada por
+                            vosotros</p>
+                    </div>
+
+                    <!-- Modal footer -->
+                    <div class="modal-footer">
+                        <button>
+                            <a href="https://ilusiona.com/" target="_blank">Visítanos</a>
+                        </button>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+
+        <h2>LaserCity</h2>
+
+        <section class="row">
+            <div class="col">
+                <img src="Imagenes/LaserCity.png" class="img-fluid rounded" class="img-fluid rounded shadow"
+                    class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#ocio2" style="cursor: pointer;">
+            </div>
+
+
+        </section>
+
+
+        <div class="modal" id="ocio2">
+            <div class="modal-dialog modal-sm modal-dialog-centered modal-lg">
+                <div class="modal-content">
+
+                    <!-- Modal Header -->
+                    <div class="modal-header">
+                        <h4 class="modal-title">LaserCity</h4>
+                        <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
+                    </div>
+
+                    <!-- Modal body -->
+                    <div class="modal-body">
+                        <img src="Imagenes/LaserCity2.png" controls width="100%" alt="">
+                        <p> <b>LaserCity:</b> En plaza norte 2 ofrecemos una impresionante experiencia llena de
+                            diversion y locura para disfrutar con tus familiares o amigos, en LaserCity eres el
+                            encargado de hacer que tu equipo gane eliminando al equipo contrario en un escenario lleno
+                            de obstáculos y retos para poder ganar</p>
+                    </div>
+
+                    <!-- Modal footer -->
+                    <div class="modal-footer">
+                        <button>
+                            <a href="https://www.lasercity.es/ " target="_blank">Visítanos</a>
+                        </button>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+
+        <h2>Pista de squi</h2>
+
+
+        <section class="row">
+            <div class="col">
+                <img src="Imagenes/skie.jpg" class="img-fluid rounded" class="img-fluid rounded shadow"
+                    class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#ocio3" style="cursor: pointer;">
+            </div>
+
+
+        </section>
+
+
+        <div class="modal" id="ocio3">
+            <div class="modal-dialog modal-sm modal-dialog-centered modal-lg">
+                <div class="modal-content">
+
+                    <!-- Modal Header -->
+                    <div class="modal-header">
+                        <h4 class="modal-title">Pista de squi</h4>
+                        <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
+                    </div>
+
+                    <!-- Modal body -->
+                    <div class="modal-body">
+                        <img src="Imagenes/squisss.jpg" controls width="100%" alt="">
+                        <p> <b>squi:</b>En el plaza norte 2, disponemos de una enorme pista de squi donde puede esquiar
+                            todo lo que quieras, solo o en familia, disponemos de material suficiente para que todos
+                            vosotros podais llevaros a casa una experiencia inolvidable</p>
+                    </div>
+
+                    <!-- Modal footer -->
+                    <div class="modal-footer">
+                        <button>
+                            <a href="https://www.intuxanadu.com/madrid-snozone/ " target="_blank">Visítanos</a>
+                        </button>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+
 
     </article>
 
