barra de navegacion y video index

--- a/proyecto html/aviso_legal.html
+++ b/proyecto html/aviso_legal.html
@@ -10,6 +10,9 @@
     <link rel="stylesheet" href="Imagenes/logoPlaza.jpg">
     
     <style>
+        .bg-plaza-norte {
+            background-color: #003580 !important;
+        }
         h2 {
             justify-self: center;
         }
@@ -18,7 +21,44 @@
 
 <body>
     <header class="text-center">
-        <img src="Imagenes/logoPlaza.jpg" alt="logoPlaza">
+        <nav class="navbar navbar-expand-md lg bg-plaza-norte navbar-dark sticky-top">
+        <div class="container-fluid">
+            <a class="navbar-brand" href="#"><img src="Imagenes/logoPlaza.jpg" alt="" height="100"></a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
+                aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <ul class="navbar-nav mb-2 mb-lg-0">
+                    <li class="nav-item">
+                        <a class="nav-link" href="index.html"><b>INICIO</b></a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="tiendas.html"><b>TIENDAS</b></a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="restaurantes.html"><b>RESTAURANTES</b></a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="ocio.html"><b>OCIO</b></a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="cine.html"><b>CINE</b></a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="visitanos.html"><b>VISÍTANOS</b></a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="contacto.html"><b>CONTACTO</b></a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link active" aria-current="page" href="aviso_legal.html"><b>AVISO LEGAL</b></a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </nav>
     </header>
     <article>
         <section class="acordeon-item">
