--- a/proyecto html/restaurantes.html
+++ b/proyecto html/restaurantes.html
@@ -9,6 +9,11 @@
     <title>Restaurantes</title>
     <link rel="stylesheet" href="Imagenes/logoPlaza.jpg">
     <style>
+
+        .bg-plaza-norte {
+            background-color: #003580 !important;
+        }
+
         .col {
             margin-bottom: 60px;
         }
@@ -20,7 +25,44 @@
 
 <body>
     <header class="text-center">
-        <img src="Imagenes/logoPlaza.jpg" alt="logoPlaza">
+        <nav class="navbar navbar-expand-md lg bg-plaza-norte navbar-dark sticky-top">
+            <div class="container-fluid">
+                <a class="navbar-brand" href="#"><img src="Imagenes/logoPlaza.jpg" alt="" height="100"></a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                    data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
+                    aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                    <ul class="navbar-nav mb-2 mb-lg-0">
+                        <li class="nav-item">
+                            <a class="nav-link" href="index.html"><b>INICIO</b></a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="tiendas.html"><b>TIENDAS</b></a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link active" aria-current="page" href="restaurantes.html"><b>RESTAURANTES</b></a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="ocio.html"><b>OCIO</b></a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="cine.html"><b>CINE</b></a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="visitanos.html"><b>VISÍTANOS</b></a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="contacto.html"><b>CONTACTO</b></a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="aviso_legal.html"><b>AVISO LEGAL</b></a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </nav>
     </header>
 
     <article class="container">
