no me acuerdo que he hecho pero algo he hecho

--- a/proyecto html/cine.html
+++ b/proyecto html/cine.html
@@ -8,11 +8,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/js/bootstrap.bundle.min.js"></script>
     <title>cine</title>
     <link rel="stylesheet" href="Imagenes/logoPlaza.jpg">
-    <style>
-        .bg-plaza-norte {
-            background-color: #003580 !important;
-        }
-    </style>
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
