--- a/proyecto html/aviso_legal.html
+++ b/proyecto html/aviso_legal.html
@@ -8,15 +8,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/js/bootstrap.bundle.min.js"></script>
     <title>Aviso legal</title>
     <link rel="stylesheet" href="Imagenes/logoPlaza.jpg">
-    
-    <style>
-        .bg-plaza-norte {
-            background-color: #003580 !important;
-        }
-        h2 {
-            justify-self: center;
-        }
-    </style>
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
