--- a/proyecto html/index.html
+++ b/proyecto html/index.html
@@ -8,26 +8,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/js/bootstrap.bundle.min.js"></script>
     <title>Proyecto</title>
     <link rel="icon" href="Imagenes/logoPlaza.jpg">
-
-    <style>
-        .bg-plaza-norte {
-            background-color: #003580 !important;
-        }
-
-        .carousel img {
-            width: 60%;
-            aspect-ratio: 16/9;
-            object-fit: cover;
-        }
-
-        .carousel-inner {
-            width: 60%;
-            aspect-ratio: 16/9;
-            object-fit: cover;
-            justify-self: center;
-
-        }
-    </style>
+    <link rel="stylesheet" href="style.css">
 
 </head>
 
