--- a/proyecto html/tiendas.html
+++ b/proyecto html/tiendas.html
@@ -8,16 +8,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/js/bootstrap.bundle.min.js"></script>
     <title>Tiendas</title>
     <link rel="stylesheet" href="Imagenes/logoPlaza.jpg">
-    <style>
-
-        .bg-plaza-norte {
-            background-color: #003580 !important;
-        }
-
-        .col{
-            margin-bottom: 60px;
-        }
-    </style>
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
