--- a/proyecto html/visitanos.html
+++ b/proyecto html/visitanos.html
@@ -8,11 +8,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/js/bootstrap.bundle.min.js"></script>
     <title>Visítanos</title>
     <link rel="stylesheet" href="Imagenes/logoPlaza.jpg">
-    <style>
-        .bg-plaza-norte {
-            background-color: #003580 !important;
-        }
-    </style>
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
@@ -57,7 +53,7 @@
         </nav>
     </header>
 
-    <article>
+    <article id="visitanos">
         <h2>¿Dónde estamos?</h2>
         <p>Nos encontramos en San Sebastián de los Reyes, Madrid. Plaza Norte 2 es uno de los centros comerciales más
             grandes y bonitos de Europa.</p>
